--- a/menu/menu.css
+++ b/menu/menu.css
@@ -17,7 +17,6 @@ body {
 .menu-container {
     min-width: 1080px;
     max-width: 1080px;
-    max-height: 1080px;
     min-height: 1080px;
     padding: 30px 60px;
     background-color: #efece7;
@@ -37,6 +36,14 @@ body {
 
 .menu-phone {
     font-size: 1.8rem;
+    font-weight: 400;
+    text-align: center;
+    margin-bottom: 0.5rem;
+    color: #000;
+}
+
+.menu-hours {
+    font-size: 1.4rem;
     font-weight: 400;
     text-align: center;
     margin-bottom: 0.5rem;
@@ -126,3 +133,14 @@ body {
     color: #000;
 }
 
+.addon-item {
+    border-top: 1px dashed #666;
+    padding-top: 0.5rem;
+    margin-top: 0.5rem;
+}
+
+.addon-name {
+    font-style: italic;
+    color: #666;
+    font-weight: 300;
+}
