--- a/menu/menu.css
+++ b/menu/menu.css
@@ -133,10 +133,13 @@ body {
     color: #000;
 }
 
-.addon-item {
+.addon-section {
     border-top: 1px dashed #666;
     padding-top: 0.5rem;
-    margin-top: 0.5rem;
+    padding-bottom: 0.5rem;
+    display: flex;
+    flex-direction: column;
+    gap: 0.5rem;
 }
 
 .addon-name {
